--- a/product.html
+++ b/product.html
@@ -3,224 +3,195 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EAS Tracker — Product</title>
+  <title>EAS Tracker – Product</title>
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
-  <div id="app">
+  <nav class="nav">
+    <a href="/">← Dashboard</a>
+    <span class="nav-right badge">EAS Product Page</span>
+  </nav>
 
-    <!-- ========= LOGIN (shown if not authenticated) ========= -->
-    <div id="login" class="auth" style="display:none">
-      <h1 class="brand">EAS Tracker</h1>
-      <p>Enter password to access</p>
-      <div class="row">
-        <input id="pw" type="password" class="input" placeholder="Password"/>
-        <button id="loginBtn" class="btn">Login</button>
-      </div>
+  <div class="container">
+    <!-- Header -->
+    <div id="pdHeader">
+      <h2 id="pdTitle">Product</h2>
+      <span id="pdSku" class="muted"></span>
+      <span id="pdTransitBadge" class="badge"></span>
     </div>
 
-    <!-- ========= MAIN ========= -->
-    <div id="main" style="display:none">
-      <nav class="nav">
-        <a href="/" class="active">← Dashboard</a>
-        <span class="nav-right"><a id="logoutLink">Logout</a></span>
-      </nav>
+    <!-- 1) Stock & Ad Spend by Country (for THIS product) -->
+    <section class="section">
+      <h2>Stock &amp; Ad Spend by Country</h2>
+      <table class="table">
+        <thead>
+          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+        </thead>
+        <tbody id="pdStockBody"><!-- rows injected --></tbody>
+        <tfoot>
+          <tr class="totals">
+            <th>Totals</th>
+            <th id="pdStockTotal">0</th>
+            <th id="pdAdTotal">0</th>
+          </tr>
+        </tfoot>
+      </table>
+    </section>
 
-      <div class="container">
+    <!-- 2) Profit + Advertising Budget (per country, manual) -->
+    <section class="section">
+      <h2>Profit + Advertising Budget (per country)</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdPBCountry" class="input"></select>
+          <input id="pdPBValue" type="number" class="input" step="0.01" placeholder="Budget (USD)"/>
+          <button id="pdPBSave" class="btn">Save</button>
+        </div>
+        <small>These are manual reference budgets you set per country (not auto-filled).</small>
+      </div>
+      <table class="table">
+        <thead><tr><th>Country</th><th>Budget (USD)</th><th>Actions</th></tr></thead>
+        <tbody id="pdPBBBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
 
-        <!-- ======= HEADER ======= -->
-        <section class="section">
-          <h2 id="pdTitle">Product</h2>
-          <div id="pdSku" class="muted"></div>
-          <div class="badge" id="pdTransitBadge">Transit total: 0</div>
-        </section>
+    <!-- 3) Daily Ad Spend (replace per product+country+platform) -->
+    <section class="section">
+      <h2>Daily Ad Spend</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdAdCountry" class="input"></select>
+          <select id="pdAdPlatform" class="input">
+            <option value="facebook">Facebook</option>
+            <option value="tiktok">TikTok</option>
+            <option value="google">Google</option>
+          </select>
+          <input id="pdAdAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
+          <button id="pdAdSave" class="btn">Save / Replace</button>
+        </div>
+        <small>Re-saving for the same country + platform replaces the previous value.</small>
+      </div>
+      <table class="table">
+        <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
+        <tbody id="pdAdBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
 
-        <!-- ======= 1) STOCK & AD SPEND BY COUNTRY ======= -->
-        <section class="section">
-          <h3>Stock &amp; Ad Spend by Country</h3>
-          <table class="table">
-            <thead>
-              <tr><th>Country</th><th>Stock</th><th>Total Ad Spend (USD)</th></tr>
-            </thead>
-            <tbody id="pdStockBody"><!-- rows injected --></tbody>
-            <tfoot>
-              <tr class="totals">
-                <th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th>
-              </tr>
-            </tfoot>
-          </table>
-        </section>
+    <!-- 4) Stock Movement (creates shipment for THIS product) -->
+    <section class="section">
+      <h2>Stock Movement</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdMvFrom" class="input"></select>
+          <span>→</span>
+          <select id="pdMvTo" class="input"></select>
+          <input id="pdMvQty" type="number" class="input" min="0" placeholder="Qty"/>
+          <input id="pdMvShip" type="number" class="input" min="0" step="0.01" placeholder="Shipping Cost (USD)"/>
+          <button id="pdMvAdd" class="btn">Add Movement</button>
+        </div>
+        <small>When marked as arrived, stock is added to destination and deducted from origin.</small>
+      </div>
+    </section>
 
-        <!-- ======= 2) PROFIT + ADVERTISING BUDGET (manual, per country) ======= -->
-        <section class="section">
-          <h3>Profit + Advertising Budget (Manual, per country)</h3>
-          <div class="card">
-            <div class="row wrap">
-              <select id="pdPBCountry" class="input"></select>
-              <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" step="0.01" min="0"/>
-              <button id="pdPBSave" class="btn">Save</button>
-            </div>
-          </div>
-          <table class="table">
-            <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
-            <tbody id="pdPBBBody"><!-- rows injected --></tbody>
-          </table>
-        </section>
+    <!-- 5) Transit (China → Kenya) for THIS product -->
+    <section class="section">
+      <h2>Transit (China → Kenya)</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
+            <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
 
-        <!-- ======= 3) DAILY AD SPEND (replace existing) ======= -->
-        <section class="section">
-          <h3>Daily Ad Spend</h3>
-          <div class="card">
-            <div class="row wrap">
-              <select id="pdAdCountry" class="input"></select>
-              <select id="pdAdPlatform" class="input">
-                <option value="facebook">Facebook</option>
-                <option value="tiktok">TikTok</option>
-                <option value="google">Google</option>
-              </select>
-              <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" step="0.01" min="0"/>
-              <button id="pdAdSave" class="btn">Save / Replace</button>
-            </div>
-            <small>Saving again for the same <b>country + platform</b> replaces the current value.</small>
-          </div>
-          <table class="table">
-            <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
-            <tbody id="pdAdBody"><!-- rows injected --></tbody>
-          </table>
-        </section>
+    <!-- 6) Transit (Inter-country) for THIS product -->
+    <section class="section">
+      <h2>Transit (Inter-country)</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
+            <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="pdShipICBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
 
-        <!-- ======= 4) REMITTANCE / PROFIT ENTRIES ======= -->
-        <section class="section">
-          <h3>Remittance / Profit Entries</h3>
-          <div class="card">
-            <div class="row wrap">
-              <input id="pdRStart" type="date" class="input"/>
-              <input id="pdREnd" type="date" class="input"/>
-              <select id="pdRCountry" class="input"></select>
-              <input id="pdROrders" type="number" class="input" placeholder="Orders" min="0"/>
-              <input id="pdRPieces" type="number" class="input" placeholder="Pieces" min="0"/>
-              <input id="pdRRevenue" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
-              <input id="pdRAdSpend" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-              <input id="pdRExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
-              <button id="pdRAdd" class="btn">Add</button>
-            </div>
-          </div>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Period</th><th>Country</th><th>Orders</th><th>Pieces</th>
-                <th>Revenue</th><th>Ad Spend</th><th>Extra/pc</th><th>Profit</th>
-              </tr>
-            </thead>
-            <tbody id="pdRBody"><!-- rows injected --></tbody>
-            <tfoot>
-              <tr class="totals">
-                <th colspan="4">Totals</th>
-                <th id="pdRRevT">0</th><th id="pdRAdT">0</th><th id="pdRExtraT">0</th><th id="pdRProfitT">0</th>
-              </tr>
-            </tfoot>
-          </table>
-        </section>
+    <!-- 7) Lifetime (THIS product) -->
+    <section class="section">
+      <h2>Lifetime (This Product)</h2>
+      <div class="card">
+        <div class="row wrap">
+          <input id="pdLPStart" type="date" class="input"/>
+          <input id="pdLPEnd" type="date" class="input"/>
+          <button id="pdLPRun" class="btn">Run</button>
+        </div>
+      </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th>
+            <th>Base Cost</th><th>Pieces</th><th>Profit</th>
+          </tr>
+        </thead>
+        <tbody id="pdLPBody"><!-- rows injected --></tbody>
+        <tfoot>
+          <tr class="totals">
+            <th>Totals</th>
+            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
+            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
+          </tr>
+        </tfoot>
+      </table>
+    </section>
 
-        <!-- ======= 5) STOCK MOVEMENT (create shipment) ======= -->
-        <section class="section">
-          <h3>Stock Movement</h3>
-          <div class="card">
-            <div class="row wrap">
-              <select id="pdMvFrom" class="input"></select>
-              <span>→</span>
-              <select id="pdMvTo" class="input"></select>
-              <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
-              <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-              <button id="pdMvAdd" class="btn">Add Movement</button>
-            </div>
-            <small>When marked as arrived, the system will <b>add to destination</b> and <b>deduct from origin</b>.</small>
-          </div>
-        </section>
+    <!-- 8) Influencer Spend -->
+    <section class="section">
+      <h2>Influencer Spend</h2>
+      <div class="card">
+        <div class="h">Add Influencer</div>
+        <div class="row wrap">
+          <input id="pdInfName" class="input" placeholder="Influencer Name"/>
+          <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
+          <select id="pdInfCountry" class="input"></select>
+          <button id="pdInfAdd" class="btn">Add Influencer</button>
+        </div>
+      </div>
 
-        <!-- ======= 6) TRANSIT: CHINA → KENYA ======= -->
-        <section class="section">
-          <h3>Transit (China → Kenya)</h3>
-          <table class="table">
-            <thead>
-              <tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr>
-            </thead>
-            <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
-          </table>
-        </section>
+      <div class="card">
+        <div class="h">Add Spend</div>
+        <div class="row wrap">
+          <input id="pdInfDate" type="date" class="input"/>
+          <select id="pdInfSelect" class="input"></select>
+          <select id="pdInfCountry" class="input" title="Country (applies to spend)"></select>
+          <input id="pdInfAmount" type="number" class="input" step="0.01" placeholder="Spend (USD)"/>
+          <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+        </div>
+      </div>
 
-        <!-- ======= 7) TRANSIT: INTER-COUNTRY ======= -->
-        <section class="section">
-          <h3>Transit (Inter-country)</h3>
-          <table class="table">
-            <thead>
-              <tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr>
-            </thead>
-            <tbody id="pdShipICBody"><!-- rows injected --></tbody>
-          </table>
-        </section>
+      <div class="card">
+        <div class="h">Filter</div>
+        <div class="row wrap">
+          <input id="pdInfStart" type="date" class="input"/>
+          <input id="pdInfEnd" type="date" class="input"/>
+          <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+          <button id="pdInfRun" class="btn outline">Run</button>
+          <span class="badge">Total: <span id="pdInfTotal">0</span> USD</span>
+        </div>
+      </div>
 
-        <!-- ======= 8) LIFETIME (THIS PRODUCT) ======= -->
-        <section class="section">
-          <h3>Lifetime (This Product)</h3>
-          <div class="card">
-            <div class="row wrap">
-              <input id="pdLPStart" type="date" class="input"/>
-              <input id="pdLPEnd" type="date" class="input"/>
-              <button id="pdLPRun" class="btn">Run</button>
-            </div>
-          </div>
-          <table class="table">
-            <thead>
-              <tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr>
-            </thead>
-            <tbody id="pdLPBody"><!-- rows injected --></tbody>
-            <tfoot>
-              <tr class="totals">
-                <th>Totals</th>
-                <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
-                <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
-              </tr>
-            </tfoot>
-          </table>
-        </section>
-
-        <!-- ======= 9) INFLUENCER SPEND ======= -->
-        <section class="section">
-          <h3>Influencer Spend</h3>
-          <div class="card">
-            <div class="row wrap">
-              <input id="pdInfName" class="input" placeholder="New influencer name"/>
-              <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
-              <select id="pdInfCountry" class="input"></select>
-              <button id="pdInfAdd" class="btn">Add Influencer</button>
-            </div>
-            <div class="row wrap">
-              <input id="pdInfDate" type="date" class="input"/>
-              <select id="pdInfSelect" class="input"></select>
-              <input id="pdInfAmount" type="number" class="input" placeholder="Spend (USD)" min="0" step="0.01"/>
-              <button id="pdInfSpendAdd" class="btn">Add Spend</button>
-            </div>
-            <div class="row wrap">
-              <input id="pdInfStart" type="date" class="input"/>
-              <input id="pdInfEnd" type="date" class="input"/>
-              <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-              <button id="pdInfRun" class="btn outline">Filter</button>
-            </div>
-          </div>
-
-          <table class="table">
-            <thead><tr><th>Date</th><th>Country</th><th>Name</th><th>Social</th><th>Amount</th><th></th></tr></thead>
-            <tbody id="pdInfBody"><!-- rows injected --></tbody>
-            <tfoot>
-              <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
-            </tfoot>
-          </table>
-        </section>
-
-      </div><!-- /container -->
-    </div><!-- /main -->
-  </div><!-- /app -->
+      <table class="table">
+        <thead>
+          <tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount (USD)</th><th></th></tr>
+        </thead>
+        <tbody id="pdInfBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
+  </div>
 
   <script src="/public/app.js"></script>
 </body>
