--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
       <div class="row">
-        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password"/>
+        <input id="pw" type="password" class="input" placeholder="Password"/>
         <button id="loginBtn" class="btn">Login</button>
       </div>
-      <div id="loginError" class="muted" style="margin-top:6px;"></div>
     </div>
 
     <!-- ================= MAIN APP ================= -->
@@ -43,26 +42,22 @@
               <div class="card kpi"><div class="h">Warehouses (Countries)</div><div id="kpiCountries">0</div></div>
               <div class="card kpi"><div class="h">Transit Shipments</div><div id="kpiTransit">0</div></div>
               <div class="card kpi"><div class="h">Total Ad Spend</div><div id="kpiAdSpend">0 USD</div></div>
-              <!-- IMPORTANT: This is filled from the Weekly Delivered grand total -->
               <div class="card kpi"><div class="h">Delivered (Mon–Sun)</div><div id="kpiDelivered">0</div></div>
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country (totals row included) -->
+          <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table id="stockByCountryTbl" class="table">
+            <table id="stockByCountryTable" class="table">
               <thead>
                 <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
               </thead>
-              <tbody><!-- rows injected by app.js --></tbody>
+              <tbody id="stockByCountryBody"><!-- rows injected by app.js --></tbody>
               <tfoot>
-                <tr class="totals"><th>Totals</th><th id="stockT">0</th><th id="adT">0.00</th></tr>
+                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
               </tfoot>
             </table>
-            <small>
-              Daily Ad Spend entries are upserted per <b>product + country + platform</b>. Adding again replaces the amount (used in totals).
-            </small>
           </div>
 
           <!-- Weekly Delivered: editable grid Monday–Sunday by country -->
@@ -70,33 +65,23 @@
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
               <div class="row wrap">
-                <button id="wdPrev" class="btn outline">◀ Prev week</button>
-                <div class="badge" id="wdRange">Week: </div>
-                <button id="wdNext" class="btn outline">Next week ▶</button>
-                <button id="wdSave" class="btn">Save</button>
-                <button id="wdReset" class="btn danger outline">Reset</button>
+                <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
+                <div class="badge" id="weeklyRange">Week: </div>
+                <button id="weeklyNext" class="btn outline">Next week ▶</button>
+                <button id="weeklySave" class="btn">Save</button>
+                <button id="weeklyReset" class="btn danger outline">Reset</button>
               </div>
-              <small>
-                This grid lists <b>all countries</b> in your system. The KPI “Delivered (Mon–Sun)” above is exactly the
-                grand total in this grid for the selected week.
-              </small>
+              <small>The grid shows <b>all countries</b> in the system. Click a cell to edit delivered pieces for that day/country.</small>
             </div>
             <div class="table-scroll">
-              <table id="weeklyGrid" class="table compact">
-                <thead><!-- Mon..Sun headers injected --></thead>
-                <tbody><!-- one row per country injected --></tbody>
+              <table id="weeklyTable" class="table compact">
+                <thead id="weeklyHead"><!-- Mon..Sun headers injected --></thead>
+                <tbody id="weeklyBody"><!-- one row per country injected --></tbody>
                 <tfoot>
-                  <tr class="totals">
-                    <th>All Countries</th>
-                    <!-- 7 day column totals are injected here -->
-                    <th class="col-total">0</th>
-                    <th class="col-total">0</th>
-                    <th class="col-total">0</th>
-                    <th class="col-total">0</th>
-                    <th class="col-total">0</th>
-                    <th class="col-total">0</th>
-                    <th class="col-total">0</th>
-                    <th id="wdGrand">0</th>
+                  <tr class="totals"><th>Totals</th>
+                    <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
+                    <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
+                    <th id="wAllT">0</th>
                   </tr>
                 </tfoot>
               </table>
@@ -116,9 +101,9 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adAdd" class="btn">Save / Replace</button>
+                <button id="adSave" class="btn">Save/Replace</button>
               </div>
-              <small>Saving again for the same <b>product + platform + country</b> will replace the previous amount.</small>
+              <small>Saving again for the same <b>product + platform + country</b> replaces the previous value.</small>
             </div>
           </div>
 
@@ -135,14 +120,14 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked as arrived, the system will <b>add to destination</b> and <b>deduct from origin</b>.</small>
+              <small>When marked as arrived, the system <b>adds to destination</b> and <b>deducts from origin</b>.</small>
             </div>
           </div>
 
           <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table">
+            <table class="table" id="shipCK">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
@@ -153,7 +138,7 @@
           <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table">
+            <table class="table" id="shipIC">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
@@ -170,11 +155,11 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table class="table" id="profitCountryTable">
+            <table class="table" id="profitCountry">
               <thead><tr>
                 <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
               </tr></thead>
-              <tbody><!-- rows injected --></tbody>
+              <tbody id="profitCountryBody"><!-- rows injected --></tbody>
               <tfoot>
                 <tr class="totals">
                   <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
@@ -242,7 +227,7 @@
             <tbody><!-- rows injected --></tbody>
           </table>
 
-          <small>Click <b>Open</b> to go to that product’s own page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
+          <small>Click <b>Open</b> to go to that product’s page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
         <!-- ============ PERFORMANCE ============ -->
@@ -260,6 +245,7 @@
               </select>
               <input id="pfStart" type="date" class="input"/>
               <input id="pfEnd" type="date" class="input"/>
+              <!-- Keep “All countries” first, then app.js injects all available countries -->
               <select id="pfCountry" class="input"><option value="">All countries</option></select>
               <button id="pfRun" class="btn">Run</button>
             </div>
@@ -277,13 +263,13 @@
             <div class="row wrap">
               <input id="rStart" type="date" class="input"/>
               <input id="rEnd" type="date" class="input"/>
+              <!-- app.js excludes China here -->
               <select id="rCountry" class="input"></select>
               <select id="rProduct" class="input"></select>
               <input id="rOrders" type="number" class="input" placeholder="Orders" min="0"/>
               <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0"/>
               <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
               <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-              <!-- Extra per-piece delivery cost (used everywhere for profit) -->
               <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
@@ -298,7 +284,7 @@
           <!-- Running Balance (all time) -->
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
-            <div id="feRunning" class="balance">0.00 USD</div>
+            <div id="runBalance" class="balance">0.00 USD</div>
           </div>
 
           <!-- Manage Categories (add + delete) -->
@@ -315,26 +301,24 @@
             <div class="row cats">
               <div>
                 <h4>Debits</h4>
-                <div id="fcDebitList" class="chips deletable"><!-- chips with delete buttons --></div>
+                <div id="fcDebits" class="chips"><!-- chips with delete buttons --></div>
               </div>
               <div>
                 <h4>Credits</h4>
-                <div id="fcCreditList" class="chips deletable"><!-- chips with delete buttons --></div>
+                <div id="fcCredits" class="chips"><!-- chips with delete buttons --></div>
               </div>
             </div>
           </div>
 
-          <!-- Entries (with date range filter) -->
+          <!-- Entries -->
           <div class="card">
-            <div class="h">Entries</div>
+            <div class="h">Entries</h4>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
-              <!-- type is derived from category; keep visible but not required -->
               <select id="feType" class="input">
                 <option value="debit">Debit</option>
                 <option value="credit">Credit</option>
               </select>
-              <!-- category must be selected from existing list -->
               <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
@@ -342,16 +326,15 @@
             </div>
 
             <div class="row wrap">
-              <!-- PERIOD FILTER (from – to) -->
               <input id="fes" type="date" class="input"/>
               <input id="fee" type="date" class="input"/>
               <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Balance for period: —</div>
+              <div id="feBalance" class="badge">Period Balance: —</div>
             </div>
 
             <table id="feTable" class="table">
               <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
-              <tbody><!-- rows injected; include delete buttons --></tbody>
+              <tbody><!-- rows injected --></tbody>
             </table>
           </div>
         </section>
@@ -374,7 +357,7 @@
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
-              <select id="editProdSel" class="input"><option value="">Select product…</option></select>
+              <select id="epSelect" class="input"><option value="">Select product…</option></select>
               <input id="epName" class="input" placeholder="Product name"/>
               <input id="epSku" class="input" placeholder="SKU"/>
               <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
@@ -389,11 +372,11 @@
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
               <input id="snapName" class="input" placeholder="Name this snapshot"/>
-              <button id="ssSave" class="btn">Save current system data</button>
+              <button id="snapSave" class="btn">Save current system data</button>
             </div>
             <table class="table">
               <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
-              <tbody id="ssList"><!-- rows with Push / Delete buttons (must work) --></tbody>
+              <tbody id="snapList"><!-- rows with Push / Delete buttons --></tbody>
             </table>
           </div>
         </section>
@@ -402,7 +385,6 @@
     </div><!-- /main -->
   </div><!-- /app -->
 
-  <!-- Keep the script AT THE VERY END so login + handlers always bind correctly -->
   <script src="/public/app.js"></script>
 </body>
 </html>
