--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
-      <div class="row">
-        <input id="pw" type="password" class="input" placeholder="Password"/>
-        <button id="loginBtn" class="btn">Login</button>
-      </div>
+      <form id="loginForm" class="row" autocomplete="off">
+        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password" />
+        <button id="loginBtn" class="btn" type="submit">Login</button>
+      </form>
     </div>
 
     <!-- ================= MAIN APP ================= -->
@@ -88,7 +88,7 @@
             </div>
           </div>
 
-          <!-- Daily Advertising Spend (no date; replace if exists) -->
+          <!-- Daily Advertising Spend -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -245,7 +245,6 @@
               </select>
               <input id="pfStart" type="date" class="input"/>
               <input id="pfEnd" type="date" class="input"/>
-              <!-- Keep “All countries” first, then app.js injects all available countries -->
               <select id="pfCountry" class="input"><option value="">All countries</option></select>
               <button id="pfRun" class="btn">Run</button>
             </div>
@@ -263,7 +262,6 @@
             <div class="row wrap">
               <input id="rStart" type="date" class="input"/>
               <input id="rEnd" type="date" class="input"/>
-              <!-- app.js excludes China here -->
               <select id="rCountry" class="input"></select>
               <select id="rProduct" class="input"></select>
               <input id="rOrders" type="number" class="input" placeholder="Orders" min="0"/>
@@ -312,7 +310,7 @@
 
           <!-- Entries -->
           <div class="card">
-            <div class="h">Entries</h4>
+            <div class="h">Entries</div>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
               <select id="feType" class="input">
@@ -385,6 +383,42 @@
     </div><!-- /main -->
   </div><!-- /app -->
 
-  <script src="/public/app.js"></script>
+  <!-- load main app script (cache-busted) -->
+  <script defer src="/public/app.js?v=5"></script>
+
+  <!-- tiny inline fallback for login so the button always works -->
+  <script>
+  (function () {
+    var form = document.getElementById('loginForm');
+    var btn  = document.getElementById('loginBtn');
+    var pw   = document.getElementById('pw');
+    if (!form || !btn || !pw) return;
+
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const val = (pw.value || '').trim();
+      if (!val) { alert('Please enter the password'); return; }
+      try {
+        const r = await fetch('/api/auth', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          credentials: 'include',
+          body: JSON.stringify({ password: val })
+        });
+        if (!r.ok) {
+          const ct = r.headers.get('content-type') || '';
+          const data = ct.includes('application/json') ? await r.json() : await r.text();
+          throw new Error((data && data.error) ? data.error : 'Login failed');
+        }
+        // verify cookie & boot
+        const m = await fetch('/api/meta', { credentials:'include' });
+        if (!m.ok) throw new Error('Auth cookie not set');
+        location.reload();
+      } catch (err) {
+        alert(err.message || 'Wrong password');
+      }
+    }, { once: true });
+  })();
+  </script>
 </body>
 </html>
