--- a/product.html
+++ b/product.html
@@ -7,192 +7,240 @@
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
-  <nav class="nav">
-    <a href="/">← Dashboard</a>
-    <span class="nav-right badge">EAS Product Page</span>
-  </nav>
 
-  <div class="container">
-    <!-- Header -->
-    <div id="pdHeader">
-      <h2 id="pdTitle">Product</h2>
-      <span id="pdSku" class="muted"></span>
-      <span id="pdTransitBadge" class="badge"></span>
-    </div>
-
-    <!-- 1) Stock & Ad Spend by Country (for THIS product) -->
-    <section class="section">
-      <h2>Stock &amp; Ad Spend by Country</h2>
-      <table class="table">
-        <thead>
-          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
-        </thead>
-        <tbody id="pdStockBody"><!-- rows injected --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="pdStockTotal">0</th>
-            <th id="pdAdTotal">0</th>
-          </tr>
-        </tfoot>
-      </table>
-    </section>
-
-    <!-- 2) Profit + Advertising Budget (per country, manual) -->
-    <section class="section">
-      <h2>Profit + Advertising Budget (per country)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdPBCountry" class="input"></select>
-          <input id="pdPBValue" type="number" class="input" step="0.01" placeholder="Budget (USD)"/>
-          <button id="pdPBSave" class="btn">Save</button>
-        </div>
-        <small>These are manual reference budgets you set per country (not auto-filled).</small>
-      </div>
-      <table class="table">
-        <thead><tr><th>Country</th><th>Budget (USD)</th><th>Actions</th></tr></thead>
-        <tbody id="pdPBBBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
-
-    <!-- 3) Daily Ad Spend (replace per product+country+platform) -->
-    <section class="section">
-      <h2>Daily Ad Spend</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdAdCountry" class="input"></select>
-          <select id="pdAdPlatform" class="input">
-            <option value="facebook">Facebook</option>
-            <option value="tiktok">TikTok</option>
-            <option value="google">Google</option>
-          </select>
-          <input id="pdAdAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
-          <button id="pdAdSave" class="btn">Save / Replace</button>
-        </div>
-        <small>Re-saving for the same country + platform replaces the previous value.</small>
-      </div>
-      <table class="table">
-        <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
-        <tbody id="pdAdBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
-
-    <!-- 4) Stock Movement (creates shipment for THIS product) -->
-    <section class="section">
-      <h2>Stock Movement</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdMvFrom" class="input"></select>
-          <span>→</span>
-          <select id="pdMvTo" class="input"></select>
-          <input id="pdMvQty" type="number" class="input" min="0" placeholder="Qty"/>
-          <input id="pdMvShip" type="number" class="input" min="0" step="0.01" placeholder="Shipping Cost (USD)"/>
-          <button id="pdMvAdd" class="btn">Add Movement</button>
-        </div>
-        <small>When marked as arrived, stock is added to destination and deducted from origin.</small>
-      </div>
-    </section>
-
-    <!-- 5) Transit (China → Kenya) for THIS product -->
-    <section class="section">
-      <h2>Transit (China → Kenya)</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-            <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
-
-    <!-- 6) Transit (Inter-country) for THIS product -->
-    <section class="section">
-      <h2>Transit (Inter-country)</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-            <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="pdShipICBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
-
-    <!-- 7) Lifetime (THIS product) -->
-    <section class="section">
-      <h2>Lifetime (This Product)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <input id="pdLPStart" type="date" class="input"/>
-          <input id="pdLPEnd" type="date" class="input"/>
-          <button id="pdLPRun" class="btn">Run</button>
-        </div>
-      </div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th>
-            <th>Base Cost</th><th>Pieces</th><th>Profit</th>
-          </tr>
-        </thead>
-        <tbody id="pdLPBody"><!-- rows injected --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
-            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
-          </tr>
-        </tfoot>
-      </table>
-    </section>
-
-    <!-- 8) Influencer Spend -->
-    <section class="section">
-      <h2>Influencer Spend</h2>
-      <div class="card">
-        <div class="h">Add Influencer</div>
-        <div class="row wrap">
-          <input id="pdInfName" class="input" placeholder="Influencer Name"/>
-          <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
-          <select id="pdInfCountry" class="input"></select>
-          <button id="pdInfAdd" class="btn">Add Influencer</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="h">Add Spend</div>
-        <div class="row wrap">
-          <input id="pdInfDate" type="date" class="input"/>
-          <select id="pdInfSelect" class="input"></select>
-          <select id="pdInfCountry" class="input" title="Country (applies to spend)"></select>
-          <input id="pdInfAmount" type="number" class="input" step="0.01" placeholder="Spend (USD)"/>
-          <button id="pdInfSpendAdd" class="btn">Add Spend</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="h">Filter</div>
-        <div class="row wrap">
-          <input id="pdInfStart" type="date" class="input"/>
-          <input id="pdInfEnd" type="date" class="input"/>
-          <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-          <button id="pdInfRun" class="btn outline">Run</button>
-          <span class="badge">Total: <span id="pdInfTotal">0</span> USD</span>
-        </div>
-      </div>
-
-      <table class="table">
-        <thead>
-          <tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount (USD)</th><th></th></tr>
-        </thead>
-        <tbody id="pdInfBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
+  <!-- ============== LOGIN (same as index) ============== -->
+  <div id="login" class="auth" style="display:none">
+    <h1 class="brand">EAS Tracker</h1>
+    <p>Enter password to access</p>
+    <form id="loginForm" class="row" onsubmit="return false;">
+      <input id="pw" type="password" class="input" placeholder="Password"/>
+      <button id="loginBtn" class="btn" type="submit">Login</button>
+    </form>
   </div>
 
-  <script src="/public/app.js"></script>
+  <!-- ============== MAIN ============== -->
+  <div id="main" style="display:none">
+    <nav class="nav">
+      <a href="/">← Dashboard</a>
+      <span class="nav-right badge">EAS Product Page</span>
+    </nav>
+
+    <div class="container">
+      <!-- Header -->
+      <div id="pdHeader">
+        <h2 id="pdTitle">Product</h2>
+        <span id="pdSku" class="muted"></span>
+        <span id="pdTransitBadge" class="badge"></span>
+      </div>
+
+      <!-- 1) Stock & Ad Spend by Country (THIS product) -->
+      <section class="section">
+        <h2>Stock &amp; Ad Spend by Country</h2>
+        <table class="table">
+          <thead>
+            <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+          </thead>
+          <tbody id="pdStockBody"><!-- rows injected --></tbody>
+          <tfoot>
+            <tr class="totals">
+              <th>Totals</th>
+              <th id="pdStockTotal">0</th>
+              <th id="pdAdTotal">0</th>
+            </tr>
+          </tfoot>
+        </table>
+      </section>
+
+      <!-- 2) Profit + Advertising Budget (manual per country) -->
+      <section class="section">
+        <h2>Profit + Advertising Budget (per country)</h2>
+        <div class="card">
+          <div class="row wrap">
+            <select id="pdPBCountry" class="input"></select>
+            <input id="pdPBValue" type="number" class="input" step="0.01" placeholder="Budget (USD)"/>
+            <button id="pdPBSave" class="btn">Save</button>
+          </div>
+          <small>Manual reference budgets you set per country (not automatic).</small>
+        </div>
+        <table class="table">
+          <thead><tr><th>Country</th><th>Budget (USD)</th><th>Actions</th></tr></thead>
+          <tbody id="pdPBBBody"><!-- rows injected --></tbody>
+        </table>
+      </section>
+
+      <!-- 3) Daily Ad Spend (replace per product+country+platform) -->
+      <section class="section">
+        <h2>Daily Ad Spend</h2>
+        <div class="card">
+          <div class="row wrap">
+            <select id="pdAdCountry" class="input"></select>
+            <select id="pdAdPlatform" class="input">
+              <option value="facebook">Facebook</option>
+              <option value="tiktok">TikTok</option>
+              <option value="google">Google</option>
+            </select>
+            <input id="pdAdAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
+            <button id="pdAdSave" class="btn">Save / Replace</button>
+          </div>
+          <small>Re-saving the same Country + Platform replaces the previous value for this product.</small>
+        </div>
+        <table class="table">
+          <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
+          <tbody id="pdAdBody"><!-- rows injected --></tbody>
+        </table>
+      </section>
+
+      <!-- 4) Stock Movement (creates shipment for THIS product) -->
+      <section class="section">
+        <h2>Stock Movement</h2>
+        <div class="card">
+          <div class="row wrap">
+            <select id="pdMvFrom" class="input"></select>
+            <span>→</span>
+            <select id="pdMvTo" class="input"></select>
+            <input id="pdMvQty" type="number" class="input" min="0" placeholder="Qty"/>
+            <input id="pdMvShip" type="number" class="input" min="0" step="0.01" placeholder="Shipping Cost (USD)"/>
+            <button id="pdMvAdd" class="btn">Add Movement</button>
+          </div>
+          <small>When marked as arrived: add to destination and deduct from origin.</small>
+        </div>
+      </section>
+
+      <!-- 5) Transit (China → Kenya) for THIS product -->
+      <section class="section">
+        <h2>Transit (China → Kenya)</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
+              <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
+        </table>
+      </section>
+
+      <!-- 6) Transit (Inter-country) for THIS product -->
+      <section class="section">
+        <h2>Transit (Inter-country)</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
+              <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="pdShipICBody"><!-- rows injected --></tbody>
+        </table>
+      </section>
+
+      <!-- 7) Lifetime (THIS product) -->
+      <section class="section">
+        <h2>Lifetime (This Product)</h2>
+        <div class="card">
+          <div class="row wrap">
+            <input id="pdLPStart" type="date" class="input"/>
+            <input id="pdLPEnd" type="date" class="input"/>
+            <button id="pdLPRun" class="btn">Run</button>
+          </div>
+        </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th>
+              <th>Base Cost</th><th>Pieces</th><th>Profit</th>
+            </tr>
+          </thead>
+          <tbody id="pdLPBody"><!-- rows injected --></tbody>
+          <tfoot>
+            <tr class="totals">
+              <th>Totals</th>
+              <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
+              <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
+            </tr>
+          </tfoot>
+        </table>
+      </section>
+
+      <!-- 8) Influencer Spend -->
+      <section class="section">
+        <h2>Influencer Spend</h2>
+
+        <!-- Shared country selector for both forms (keeps one id expected by app.js) -->
+        <div class="row wrap" style="margin-bottom:8px">
+          <label class="muted" style="margin-right:8px">Country:</label>
+          <select id="pdInfCountry" class="input"></select>
+        </div>
+
+        <div class="card">
+          <div class="h">Add Influencer</div>
+          <div class="row wrap">
+            <input id="pdInfName" class="input" placeholder="Influencer Name"/>
+            <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
+            <button id="pdInfAdd" class="btn">Add Influencer</button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="h">Add Spend</div>
+          <div class="row wrap">
+            <input id="pdInfDate" type="date" class="input"/>
+            <select id="pdInfSelect" class="input"></select>
+            <!-- uses the same #pdInfCountry above -->
+            <input id="pdInfAmount" type="number" class="input" step="0.01" placeholder="Spend (USD)"/>
+            <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="h">Filter</div>
+          <div class="row wrap">
+            <input id="pdInfStart" type="date" class="input"/>
+            <input id="pdInfEnd" type="date" class="input"/>
+            <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+            <button id="pdInfRun" class="btn outline">Run</button>
+            <span class="badge">Total: <span id="pdInfTotal">0</span> USD</span>
+          </div>
+        </div>
+
+        <table class="table">
+          <thead>
+            <tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount (USD)</th><th></th></tr>
+          </thead>
+          <tbody id="pdInfBody"><!-- rows injected --></tbody>
+        </table>
+      </section>
+    </div><!-- /container -->
+  </div><!-- /main -->
+
+  <!-- Load app.js with cache-busting -->
+  <script defer src="/public/app.js?v=6"></script>
+
+  <!-- Tiny inline fallback so Login works even if app.js is cached/stale -->
+  <script>
+  (function () {
+    var form = document.getElementById('loginForm');
+    var btn  = document.getElementById('loginBtn');
+    var pw   = document.getElementById('pw');
+    if (!form || !btn || !pw) return;
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const val = (pw.value || '').trim();
+      if (!val) { alert('Please enter the password'); return; }
+      try {
+        const r = await fetch('/api/auth', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          credentials: 'include',
+          body: JSON.stringify({ password: val })
+        });
+        if (!r.ok) throw new Error('Login failed');
+        const m = await fetch('/api/meta', { credentials: 'include' });
+        if (!m.ok) throw new Error('Auth cookie not set');
+        location.reload();
+      } catch (err) { alert(err.message || 'Wrong password'); }
+    }, { once: true });
+  })();
+  </script>
 </body>
 </html>
