--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
-      <form id="loginForm" class="row" autocomplete="off">
-        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password" />
-        <button id="loginBtn" class="btn" type="submit">Login</button>
-      </form>
+      <form id="loginForm" novalidate>
+  <input id="pw" type="password" class="input" placeholder="Password" />
+  <button id="loginBtn" type="button" class="btn">Log in</button>
+</form>
     </div>
 
     <!-- ================= MAIN APP ================= -->
