--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EAS Tracker</title>
-  <link rel="stylesheet" href="/public/styles.css"/>
+  <link rel="stylesheet" href="/public/style.css"/>
 </head>
 <body>
   <div id="app">
@@ -14,7 +14,7 @@
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
 
-      <!-- NOTE: use a form with novalidate and a non-submit button -->
+      <!-- use a form with novalidate and a non-submit button -->
       <form id="loginForm" novalidate class="row">
         <input id="pw" type="password" class="input" placeholder="Password"/>
         <button id="loginBtn" type="button" class="btn">Login</button>
@@ -387,6 +387,6 @@
     </div><!-- /main -->
   </div><!-- /app -->
 
-  <script src="/public/app.js"></script>
+  <script defer src="/public/app.js"></script>
 </body>
 </html>
