--- a/index.html
+++ b/index.html
@@ -388,5 +388,6 @@
   </div><!-- /app -->
 
   <script defer src="/public/app.js"></script>
+  <script src="/public/app.js" defer></script>
 </body>
 </html>
